--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,9 @@
                         <div class="col-md-4">
                             <a href="{{ url_for('portal_usinas') }}" class="btn btn-outline-primary w-100">Vincular Usinas Solis</a>
                         </div>
+                        <div class="col-md-4">
+                            <a href="{{ url_for('vincular_usinas_sungrow') }}" class="btn btn-outline-primary w-100">Vincular Usinas Sungrow</a>
+                        </div>
                     </div>
                 </div>
             </div>
