Ajuste no relatório de Consórcio

--- a/templates/receitas_avulsas.html
+++ b/templates/receitas_avulsas.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Receitas Avulsas{% endblock %}
+{% block title %}Receitas{% endblock %}
 
 {% block content %}
 <div class="container mt-5 mb-5 p-4 bg-white shadow rounded">
